# Cryptox

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Frame.cpp  Frame.h  Main.cpp  README.md  SettingsPanel.cpp  SettingsPanel.h  appveyor.yml  cil.ebnf  cryptox_vc15.sln  cryptox_vc9.sln  cryptox_vc9.vcproj  cryptox_vc9.vcxproj  cryptox_vc9.vcxproj.filters  fullfeat.c.cil  fullfeat.cil.c  main.c.ccil  main.cil.c  minfeat.c.cil  prosacq.cil.c  sample.rc  wxSizeReportCtrl.h  xor.cil.c
butest/: CMakeLists.txt  butest.cpp  butest.vcxproj  butest.vcxproj.filters
butest/src/: butest.cpp  cex.cpp  main.cpp  project.cpp
cexdump/: CMakeLists.txt
cexdump/res/: cexdump.rc  resource.h
cexdump/src/: HeaderDump.cpp  HeaderDump.h  Notes.cpp  Notes.h  SectionTable.cpp  SectionTable.h  cexdump.cpp
cmake/: Util.cmake  (+7 more)
cmncore/: Algorithm.h  CMakeLists.txt  Except.h  Memory.h  NonCopyable.h  cmncore.vcxproj  config.h.in
cmncore/include/: Algorithm.h
cmncore/include/cry/: Algorithm.h  Cry.h  Except.h  Indep.h  Memory.h  NonCopyable.h  ProgramOptions.h
coilcex/: CMakeLists.txt
coilcex/include/: Executable.h  Exportable.h  Image.h  Meta.h  NoteSection.h  OSAdapter.h  Section.h  cex.h
coilcex/src/: CexHeader.h  Compress.cpp  Compress.h  Convert.cpp  Convert.h  ConverterInterface.h  Executable.cpp  Executable.h  Image.cpp  Image.h  Meta.cpp  NoteSection.cpp  OSAdapter.cpp  ResourceSection.cpp  coilcex.cpp
coilcl/: AST.cpp  AST.h  ASTNode.h  BuiltinType.h  CMakeLists.txt  Keyword.cpp  Lexer.cpp  Lexer.h  LockPipe.h  OpCodes.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  Profile.h  Semer.cpp  Semer.h  SourceLocation.h  Stage.h  Typedef.cpp  Typedef.h  UnsupportedOperationException.h  VM.cpp  ValueObject.cpp  ValueObject.h  Valuedef.h  coilcl.cpp  coilcl.h  coilcl.vcxproj  coilcl.vcxproj.filters
coilcl/Debug/: coilcl.obj.enc  parser.obj.enc
coilcl/include/: coilcl.h
coilcl/res/: coilcl.rc  resource.h
coilcl/src/: AST.cpp  AST.h  ASTNode.cpp  ASTNode.h  ASTState.h  Converter.h  IncompatibleException.h  Keyword.cpp  Lexer.cpp  LockPipe.h  OpCodes.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  Profile.h  Program.cpp  Program.h  RefCount.h  Scheme.h  Semer.cpp  Semer.h  Stage.h  StatementOperation.cpp  TypeFacade.h  Typedef.cpp  Typedef.h  Valuedef.h  coilcl.cpp
crycli/: CMakeLists.txt  Env.cpp  Env.h  FileReader.h  Reader.h  Runstrap.cpp  Runstrap.h  SourceUnit.h  StringReader.h  crycli.cpp  crycli.rc  crycli.vcxproj  crycli.vcxproj.filters
crycli/res/: crycli.rc.in
crycli/src/: SourceUnit.h  crycli.cpp  resource.h
entropysrv/: CMakeLists.txt  CryptRand.h  Main.cpp  ReadMe.txt  entropysrv.vcxproj
entropysrv/src/: CryptRand.cpp
pfbase/: Blob.h  CMakeLists.txt  DiagramStore.cpp  DiagramStore.h  File.h  FileWriter.cpp  FileWriter.h  Keypair.h  MaterialStore.cpp  MaterialStore.h  Meta.h  ObjectStore.cpp  ObjectStore.h  OtherStore.h  Project.cpp  Project.h  Store.h  StoreConfig.h  pfbase.cpp  pfbase.h  pfbase.vcxproj  pfbase.vcxproj.filters
pfbase/include/: Blob.h  DiagramStore.h  Keypair.h  MaterialStore.h  Meta.h  ObjectStore.h  Store.h
pfbase/src/: ObjectStore.h  OtherStore.h  Project.cpp  Store.h  StoreConfig.h
pfupgr/: CMakeLists.txt  pfupgr.vcxproj  pfupgr.vcxproj.filters  test.crypx
pfupgr/src/: pfupgr.cpp
src/butest/: CMakeLists.txt
src/butest/src/: bytearray.cpp  bytestream.cpp  cl.cpp  cry.cpp  cryload.cpp  eventex.cpp  main.cpp  memman.cpp  project.cpp  recval.cpp  valdef.cpp  valuedef.cpp
src/butest/test/: 10-hello.c  10-manifest.xml  20-print.c
src/cmncore/: CMakeLists.txt
src/cmncore/src/: ByteStream.cpp  Indep.cpp  Loader.cpp  MemoryManager.cpp
src/cmnval/: CMakeLists.txt
src/coilcl/: CMakeLists.txt  cil.ebnf
src/coilcl/example/: CMakeLists.txt  c_example1.c
src/coilcl/include/: coilcl.h  common.h  data.h  program.h
src/coilcl/src/: AIIPXSequencer.cpp  AST.cpp  AST.h  ASTFactory.cpp  ASTFactory.h  ASTNode.cpp  ASTNode.h  ASTState.h  ASTTrait.h  BooleanArithmetic.h  BuiltinRoutine.cpp  BuiltinRoutine.h  CILExtension.cpp  CILExtension.h  ConditionTracker.cpp  ConditionTracker.h  Converter.cpp  Converter.h  DeclNode.cpp  DirectiveScanner.cpp  DirectiveScanner.h  Emitter.cpp  Emitter.h  EmitterStream.h  ExprNode.cpp  Frontend.cpp  Frontend.h  IntrusiveScopedPtr.h  Keyword.cpp  Lexer.cpp  Lexer.h  LiteralNode.cpp  NodeId.h  NonFatal.h  OperatorNode.cpp  Optimizer.cpp  Optimizer.h  Parser.cpp  Parser.h  Preprocessor.cpp  (+29 more)
src/crycc/: CMakeLists.txt
src/crycc/src/: AST.cpp  ASTFactory.cpp  ASTNode.cpp  ArrayAccess.cpp  ArrayType.cpp  ArrayValue.cpp  BuiltinType.cpp  BuiltinValue.cpp  ConditionTracker.cpp  Converter.cpp  DeclNode.cpp  ExprNode.cpp  Factory.cpp  IteratorAccess.cpp  LiteralNode.cpp  NilType.cpp  OffsetValue.cpp  OperatorNode.cpp  PointerType.cpp  Program.cpp  RecordProxy.cpp  RecordType.cpp  RecordValue.cpp  ReferenceValue.cpp  Serialize.cpp  Stage.cpp  StmtNode.cpp  Symbol.cpp  TypeDecoder.cpp  TypeFacade.cpp  TypeHelper.cpp  Typedef.cpp  TypedefType.cpp  Unique.cpp  ValueDecoder.cpp  ValueHelper.cpp  Valuedef.cpp  VariadicType.cpp  VariantType.cpp
src/crycc/test/: ast.cpp  sourceloc.cpp  typecat.cpp  valcat.cpp  value.cpp
src/cryevm/: CMakeLists.txt
src/cryevm/include/: ExternalMethod.h  ExternalValue.h  RuntimeInterface.h  evm.h
src/cryevm/src/: CLHelper.cpp  Functional.cpp  Functional.h  Helper.cpp  Interpreter.cpp  Interpreter.h  MemoryManager.cpp  MemoryManager.h  NoStrat.h  Planner.cpp  Planner.h  State.cpp  State.h  UniquePreservePtr.h  evm.cpp  intrinmod.cpp
src/crylib/: CMakeLists.txt
src/crylib/include/: assert.h  assert.h.in  crylib.h  crylib.h.in  errno.h.in  stdbool.h  stdbool.h.in  stdio.h  stdio.h.in  stdlib.h  stdlib.h.in
src/crylib/src/: Functional.h  Functions.h  Interface.h  Stdio.cpp  crylib.cpp  crylib.h  format.cpp  main.cil.c  prosacq.cil.c  stdio.cpp  stdlib.cpp  stdlib.h
src/cryprog/: CMakeLists.txt
src/moddock/: CMakeLists.txt
src/modstub/: CMakeLists.txt
src/pfupgr/: CMakeLists.txt
src/primcore/: CMakeLists.txt
src/quidex/: CMakeLists.txt
(+393 files in other folders)
